<resources>

    <string name="app_name">SelectionLab1</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter User Name</string>
    <string name="passwordHint">Enter Your Password</string>
    <string name="loginButtonTxt">Login</string>
    <string name="errorMsgLogin">You entered an invalid login.  Please try again.</string>
    <string name="errorMsgPW">You entered an invalid password.  Please try again.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of Birth</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="major">Major</string>
    <string name="next">Next</string>
    <string name="txtMonth">Month</string>
    <string name="cert">Certificate</string>
    <string name="associates">Associates</string>
    <string name="btnNext">Next</string>
    
    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRb1">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRb3">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb4">T/Th 4:00 PM - 5:50 PM</string>
    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRb6">M/W 12:00 PN - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birth Date:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="lstCertificate">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>
    <string-array name="lstMajor">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

</resources>
