<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/idfirstNameTxt"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idLastNameTxt"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/idfirstNameTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/firstName"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idfirstNameTxt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/lastName"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/idLastNameTxt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="67dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/phone"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/idPhoneTxt"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="183dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dob"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/idYearTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/idDateSpinner"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:entries="@array/month"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneTxt" />

    <EditText
        android:id="@+id/idDayTxt"
        android:layout_width="42dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/day"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/idDateSpinner"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneTxt" />

    <EditText
        android:id="@+id/idYearTxt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/year"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneTxt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/cert"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/associates"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idYearTxt" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="339dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:checked="true"
        android:minWidth="390dp"
        android:switchMinWidth="390dp"
        android:textOff="@string/cert"
        android:textOn="@string/associates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDayTxt"
        tools:checked="true" />

    <TextView
        android:id="@+id/lblDegree"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/major"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDegree" />

    <TextView
        android:id="@+id/lblCertificate"
        android:layout_width="88dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cert"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCertificate" />

    <Button
        android:id="@+id/idNextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <Spinner
        android:id="@+id/spCertificate"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/lstCertificate"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <Spinner
        android:id="@+id/spDegree"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

</android.support.constraint.ConstraintLayout>